# rag-bench

./: .gitattributes  .gitignore  DATASET_SETUP.md  EVALUATION_RESULT_FINAL.md  RAG-Bench-plan.md  RAG_PERSISTENCE.md  README.md  SETUP.md  environment.yml  pyproject.toml  ragas_result.py  setup_env.ps1  setup_env.sh  start_api.sh  start_frontend.sh  test_evaluate_basic.py
.kiro/specs/evaluation-task-management/: design.md  requirements.md  tasks.md
.kiro/specs/rag-index-persistence/: design.md  requirements.md  tasks.md
data/indices/baseline/: corpus.json  embeddings.npy  index.faiss  metadata.json
data/rags/: baseline.json
data/tasks/: README.md
deployment/: Dockerfile.api  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  QUICKSTART.md  README.md
docs/design/: INDEX.md  README.md  SUMMARY.md
docs/design/analysis/: overview.md
docs/design/api/: overview.md
docs/design/datasets/: converters.md  dataset-comparison.md  overview.md
docs/design/evaluate/: overview.md
docs/design/prepare/: overview.md
examples/: api_demo.py  baseline_rag_example.py  batch_processing_demo.py  compare_rag_systems.py  custom_rag_integration.py  evaluate_generation.py  evaluate_rag_system.py  evaluate_retrieval.py  evaluate_with_custom_models.py  load_dataset.py  prepare_experiment_dataset.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: CorpusBrowser.tsx  DatasetPanel.tsx  EmptySearchResults.tsx  EvaluationPanel.tsx  HighlightedText.tsx  ModelRegistryPanel.tsx  Pagination.tsx  RAGPanel.tsx  ResultsPanel.tsx  (+2 more)
openspec/: project.md
output/: experiment_dummy.jsonl  test_result.json
scripts/: README_dataset_conversion.md  convert_dataset.py
scripts/converters/: __init__.py  base.py  hotpotqa.py  nq.py  xquad.py
tests/: test_analysis.py  test_api_schema.py  test_baseline_rag.py  test_baseline_rag_persistence.py  test_checkpoint_manager.py  test_checkpoint_resume_integration.py  test_corpus_by_id_endpoint.py  test_corpus_preview_endpoint.py  test_dataset_sample_endpoint.py  test_dataset_sample_pagination.py  test_dataset_stats_endpoint.py  test_delete_task_endpoint.py  test_evaluate_start_validation.py  test_evaluate_status_endpoint.py  test_evaluate_with_custom_models.py  test_frontend_delete_integration.py  test_golden_dataset_pagination.py  test_golden_dataset_select_by_ids.py  test_invalid_float_handling.py  test_jsonl_loader_id_handling.py  test_list_tasks_endpoint.py  test_metrics_ragas_integration.py  test_metrics_retrieval.py  test_rag_index_validation.py  test_sample_counting_logic.py  test_sample_info_model.py  test_sample_info_tracking.py  test_sample_selection_model.py  test_sample_selector.py  test_samples_endpoint.py  test_task_persistence.py  test_task_persistence_integration.py  test_task_status_api_integration.py
(+92 files in other folders)
