[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-benchmark"
version = "0.1.0"
description = "RAG benchmark framework based on RAGAS"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "ragas>=0.3.9",
    "pydantic>=2.0.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
analysis = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
]
baseline = [
    "faiss-cpu>=1.7.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "langchain-openai>=0.0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_benchmark"]

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
