[project]
name = "rag-bench"
version = "0.1.0"
description = "RAG benchmark framework based on RAGAS"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "ragas>=0.3.9",
    "pydantic>=2.0.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
analysis = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
]
baseline = [
    "faiss-cpu>=1.7.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
]

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
